--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/index.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="index.js"></script>
+  <script src="promise.js"></script>
 
   <title>DOM Events</title>
 </head>
@@ -41,7 +42,7 @@
 
     <div class="col s12 m6 l6 post-lists">
       <h3 class="center">List of Posts</h3>
-        <div class="card">
+        <!-- <div class="card">
             <div class="card-content">
             <span class="card-title">Let's go to the castle</span>
             <p>By: Corinna</p>
@@ -56,7 +57,7 @@
                 <p>Everyone mask up and pick their favorite ride.</p>
                 <button class="colorButton">Change Background</button>
                 </div>
-        </div>
+        </div> -->
     </div>
   </div>
 
